--- a/AI_features/Training/notebooks/CNN/CB_CNN_remastered.ipynb
+++ b/AI_features/Training/notebooks/CNN/CB_CNN_remastered.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "138afa0e-4144-4178-a85c-26ef52e46163",
    "metadata": {},
    "outputs": [
@@ -259,48 +259,26 @@
     "input_shape = (BATCH_SIZE, IMAGE_SIZE, IMAGE_SIZE, CHANNELS)\n",
     "n_classes = 2\n",
     "\n",
-    "# Model definition\n",
     "model = models.Sequential([\n",
-    "    # Assuming resize_and_rescale is defined elsewhere\n",
     "    resize_and_rescale,\n",
-    "    \n",
-    "    # First Conv2D layer\n",
     "    layers.Conv2D(32, kernel_size=(3, 3), activation='relu', input_shape=input_shape),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Second Conv2D layer\n",
     "    layers.Conv2D(64, kernel_size=(3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Third Conv2D layer\n",
     "    layers.Conv2D(64, kernel_size=(3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Fourth Conv2D layer\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Fifth Conv2D layer\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Sixth Conv2D layer\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    \n",
-    "    # Flatten the output\n",
     "    layers.Flatten(),\n",
-    "    \n",
-    "    # Dense layer for learning complex patterns\n",
     "    layers.Dense(64, activation='relu'),\n",
-    "    \n",
-    "    # Output layer with softmax activation for classification\n",
     "    layers.Dense(n_classes, activation='softmax'),\n",
     "])\n",
     "\n",
-    "\n",
-    "model.build()\n",
-    "\n"
+    "model.build()\n"
    ]
   },
   {
@@ -449,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c7e68073-13e9-44d1-ad5e-84c789f18c9f",
    "metadata": {},
    "outputs": [],
@@ -464,13 +442,12 @@
     "\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "# Define the EarlyStopping callback\n",
     "early_stopping = EarlyStopping(\n",
-    "    monitor='val_accuracy',  # Metric to monitor\n",
-    "    patience=5,              # Number of epochs to wait for improvement before stopping\n",
-    "    mode='max',              # Look for maximum value (for accuracy)\n",
-    "    restore_best_weights=True # Restore the weights of the best epoch\n",
-    ")\n"
+    "    monitor='val_accuracy',\n",
+    "    patience=5,\n",
+    "    mode='max',\n",
+    "    restore_best_weights=True\n",
+    ")"
    ]
   },
   {
@@ -651,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "0b5437c8-dbc3-484a-9e31-7757061b8677",
    "metadata": {},
    "outputs": [
@@ -669,36 +646,31 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Assuming history is the variable that holds the training history\n",
-    "\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "accuracy = history.history['accuracy']\n",
     "val_accuracy = history.history['val_accuracy']\n",
     "\n",
-    "# Plotting training and validation accuracy\n",
-    "plt.figure(figsize = (8, 8))\n",
+    "plt.figure(figsize=(8, 8))\n",
     "\n",
-    "# Subplot for Accuracy\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(range(50), accuracy, label ='TRAINING ACCURACY')\n",
-    "plt.plot(range(50), val_accuracy, label = 'VALIDATION ACCURACY')\n",
+    "plt.plot(range(50), accuracy, label='TRAINING ACCURACY')\n",
+    "plt.plot(range(50), val_accuracy, label='VALIDATION ACCURACY')\n",
     "plt.title(\"Training Accuracy\")\n",
     "plt.xlabel(\"EPOCHS\")\n",
     "plt.ylabel(\"ACCURACY\")\n",
     "plt.legend()\n",
     "\n",
-    "# Subplot for Loss\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(range(50), loss, label ='TRAINING LOSS')\n",
-    "plt.plot(range(50), val_loss, label = 'VALIDATION LOSS')\n",
+    "plt.plot(range(50), loss, label='TRAINING LOSS')\n",
+    "plt.plot(range(50), val_loss, label='VALIDATION LOSS')\n",
     "plt.title(\"Training Loss\")\n",
     "plt.xlabel(\"EPOCHS\")\n",
     "plt.ylabel(\"LOSS\")\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()  # To prevent overlap of subplots\n",
-    "plt.show()\n"
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1046,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "8f009106-a160-42a4-af39-613d291b211a",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1036,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Example results dictionary (replace with your actual metrics)\n",
     "results = {\n",
     "    'Precision': 0.97, \n",
     "    'Recall': 0.97, \n",
@@ -1072,25 +1043,20 @@
     "    'AUC' : 0.98\n",
     "}\n",
     "\n",
-    "# Create the bar graph\n",
     "plt.figure(figsize=(8, 5))\n",
     "bars = plt.bar(results.keys(), results.values(), color=['blue', 'green', 'yellow','brown' ])\n",
     "\n",
-    "# Add labels\n",
     "plt.xticks(rotation=30)\n",
     "plt.xlabel(\"Metric\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.title(\"CNN Model Performance Metrics\")\n",
-    "plt.ylim(0, 1)  # Scale from 0 to 1\n",
+    "plt.ylim(0, 1)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "\n",
-    "# Display the values on top of bars with adjusted position\n",
     "for i, v in enumerate(results.values()):\n",
-    "    # Dynamically adjust the position based on bar height\n",
     "    plt.text(i, v + 0.02, str(round(v, 3)), ha='center', fontsize=12)\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1400,25 +1366,6 @@
     "\n",
     "history_df = pd.DataFrame(history.history)\n",
     "history_df.to_csv('../../../models/history/1_model_training_history.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "28b16be3-4f63-4af1-b915-89fefebcc754",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (86520162.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[48], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    model.save(f\"../../../models/1.keras\")import matplotlib.pyplot as plt\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.save(f\"../../../models/1.keras\")"
    ]
   }
  ],
