Implemented Report Moderation and Enhanced Media Support
- Removed CNN option from disease detection (plan to add low internet speed option).
- Enabled image uploads in reports, with automatic AI model analysis and result display.
- Added functionality for users to include documents in reports and allow others to download them on the community page.
- Currently working on adding video support for reports.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -241,7 +241,7 @@
         "reportTitlePlaceholder": "Enter Report Title",
         "dateOfDiscovery": "Date of Discovery*",
         "photoUpload": {
-          "title": "Photo Upload",
+          "title": "Media Upload",
           "addPhotos": "Add Photos",
           "selectedPhotos": "photo selected",
           "multipleSelectedPhotos": "photos selected",
