fixed architecture bug for the head. the convolutional dimentions weren't adding up so I added function inside the Conv forward() to dynamically change the input sizes if they dont match up

--- a/AI_features/Training/notebooks/YOLO/yolocoral_v10/yolov10testing-Copy1.ipynb
+++ b/AI_features/Training/notebooks/YOLO/yolocoral_v10/yolov10testing-Copy1.ipynb
@@ -5,7 +5,7 @@
    "id": "06724fb4-c690-46ed-a7b1-5d722787606b",
    "metadata": {},
    "source": [
-    "## 💜 This notebook is used to test yolov10 as an alternative to yolov8."
+    "## 💜 This notebook is used to optimize the YOLOv10 framework with architectural imporvements!"
    ]
   },
   {
@@ -18,27 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3fc300d-4867-441e-8de9-d649f4c5db85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR Error reading from C:\\Users\\qianyu\\AppData\\Roaming\\Ultralytics\\settings.json: \"No Ultralytics setting 'openvino_msg'. \\nView Ultralytics Settings with 'yolo settings' or at 'C:\\\\Users\\\\qianyu\\\\AppData\\\\Roaming\\\\Ultralytics\\\\settings.json'\\nUpdate Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\"\n",
+      "Creating new Ultralytics Settings v0.0.6 file  \n",
+      "View Ultralytics Settings with 'yolo settings' or at 'C:\\Users\\qianyu\\AppData\\Roaming\\Ultralytics\\settings.json'\n",
+      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
+     ]
+    }
+   ],
    "source": [
     "# general imports\n",
     "import torch\n",
     "import tensorflow\n",
     "import cv2 \n",
     "import sklearn\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93deaf1e-6b5b-48dc-bddb-f623e75a8eee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip list"
+    "import matplotlib.pyplot as plt\n",
+    "import ultralytics"
    ]
   },
   {
